syntax = "proto3";

package counter;

service CounterService {
  rpc Ping(ProtoPing) returns (Empty);
  rpc UpdateCounterWith(ProtoCount) returns (Empty);
  rpc SendText(ProtoText) returns (Empty);
}

message Empty {}

message ProtoCount {
  string id = 1;
  int32 count = 2;
}

message ProtoPing {
  string id = 1;
}

message ProtoText {
  string id = 1;
  string text = 2;
}
